
 - ssl defaults to on
 - new option --sslca
 - clients must present a valid certificate, signed by passed CA
 - add pem as dev dep
 - more debug level logging messages
 - use random db port for tests
 - format for npm deployment
 - split controller setup into module
 - renaming app.js to npg_sentry.js
 - adding linting and tests