@@ -135,8 +135,7 @@ function _buildToken(token, user, justification) {
   return {
     token: token,
     status: constants.TOKEN_STATUS_VALID,
-    issueTime: now.format(),
-    creationReason: justification,
+    hist: [{time: now.format(), reason: justification}],
     user: user,
     expiryTime: now.clone().add(validDuration).format()
   };
@@ -172,10 +171,10 @@ function _updateToken(doc, update) {
   return p_collection.then(function(collection) {
     logger.debug('Updating token ' + doc.token +
                  '; update obj ' + JSON.stringify(update));
-    return collection.updateOne({token: doc.token}, update).then(function() {
-      doc.status = constants.TOKEN_STATUS_REVOKED;
-      return doc;
-    });
+    return collection.findOneAndUpdate({token: doc.token}, update, {returnOriginal: false})
+      .then(function(updateRes) {
+        return updateRes.value;
+      });
   });
 }
 
@@ -205,11 +204,17 @@ let revokeToken = function revokeToken(user, token, justification) {
 
   let p_updated = p_correctUser.then(function() {
     return p_document.then(function(doc) {
-      let update = {$set: {
-        status: constants.TOKEN_STATUS_REVOKED,
-        revocationReason: justification,
-        revocationTime: moment().format()
-      }};
+      let update = {
+        $set: {
+          status: constants.TOKEN_STATUS_REVOKED
+        },
+        $push: {
+          hist: {
+            time: moment().format(),
+            reason: justification
+          }
+        }
+      };
       return _updateToken(doc, update);
     });
   });
